--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -158,7 +158,7 @@
 		<hr>
 	    <footer class="footer">
 	      <div class="container">
-		        <p><a href="/api/friends">Friends List</a> | <a href=>GitHub Repo</a></p>
+		        <p><a href="/api/friends">Friends List</a> | <a href="/">Home</a> | <a href="https://github.com/dzamora1/Friend-Finder">GitHub Repo</a></p>
 	      </div>
 	    </footer>
 
